--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,117 +1,97 @@
-# Reproducible Research: Peer Assessment 1
+---
+title: "Reproducible Research: Peer Assessment 1"
+output: 
+  html_document:
+    keep_md: true
+---
 
-```{r, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
-library(ggplot2)
-library(scales)
-library(Hmisc)
-```
 
 ## Loading and preprocessing the data
-##### 1. Load the data (i.e. read.csv())
-```{r, results='markup', warning=TRUE, message=TRUE}
-if(!file.exists('activity.csv')){
-    unzip('activity.zip')
-}
-activityData <- read.csv('activity.csv')
-```
-##### 2. Process/transform the data (if necessary) into a format suitable for your analysis
-```{r}
-#activityData$interval <- strptime(gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", activityData$interval), format='%H:%M')
-```
 
------
+```{r Loading the data, echo=TRUE}
+# Unsipping the data
+unzip("E:/Backup/sush/sush/Coursera/Data Science Specialization/Reproducible Research/Project 1/RepData_PeerAssessment1/activity.zip", exdir = "E:/Backup/Jijo/Jijo/Coursera/Data Science Specialization/Reproducible Research/Project 1/RepData_PeerAssessment1" ) 
+
+# Loading the data
+activity <- read.csv("activity.csv")
+
+#Preprocessing
+str(activity)
+summary(activity)
+activity$date <- as.Date(activity$date)
+
+```
 
 ## What is mean total number of steps taken per day?
-```{r}
-stepsByDay <- tapply(activityData$steps, activityData$date, sum, na.rm=TRUE)
+
+```{r mean total number of steps}
+library(dplyr)
+library(ggplot2)
+sumSteps <- aggregate(activity$steps ~ activity$date,FUN = sum)
+colnames(sumSteps) <- c("Date","Total_Steps")
+ggplot(sumSteps, aes(Total_Steps)) + geom_histogram(col = "red",bins = 8)
 ```
 
-##### 1. Make a histogram of the total number of steps taken each day
-```{r}
-qplot(stepsByDay, xlab='Total steps per day', ylab='Frequency using binwith 500', binwidth=500)
+
+```{r average daily activity pattern}
+
+# Mean number of steps
+mean(sumSteps$Total_Steps, na.rm = TRUE) 
+
+# Median number of steps
+median(sumSteps$Total_Steps,na.rm = TRUE)
+
 ```
 
-##### 2. Calculate and report the mean and median total number of steps taken per day
-```{r}
-stepsByDayMean <- mean(stepsByDay)
-stepsByDayMedian <- median(stepsByDay)
-```
-* Mean: `r stepsByDayMean`
-* Median:  `r stepsByDayMedian`
+The average mean number of steps taken each day was 10766.19 steps.
 
------
+The median number of steps taken each day was 10765 steps.
 
-## What is the average daily activity pattern?
-```{r}
-averageStepsPerTimeBlock <- aggregate(x=list(meanSteps=activityData$steps), by=list(interval=activityData$interval), FUN=mean, na.rm=TRUE)
+# What is the average daily activity pattern?
+
+## Time Series of averaged number of steps across different intervals
+
+```{r time series}
+meanInterval <- aggregate(steps ~ interval,data = activity, FUN = mean)
+ggplot(meanInterval, aes(x = interval, y = steps)) + geom_line()
 ```
 
-##### 1. Make a time series plot
-```{r}
-ggplot(data=averageStepsPerTimeBlock, aes(x=interval, y=meanSteps)) +
-    geom_line() +
-    xlab("5-minute interval") +
-    ylab("average number of steps taken") 
-```
-
-##### 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
-```{r}
-mostSteps <- which.max(averageStepsPerTimeBlock$meanSteps)
-timeMostSteps <-  gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", averageStepsPerTimeBlock[mostSteps,'interval'])
-```
-
-* Most Steps at: `r timeMostSteps`
-
-----
 
 ## Imputing missing values
-##### 1. Calculate and report the total number of missing values in the dataset 
-```{r}
-numMissingValues <- length(which(is.na(activityData$steps)))
+We will be imputing the missing values with the mean in each interval. 
+```{r Imputing missing values}
+activity[is.na(activity)] <- tapply(activity$steps, activity$interval,mean,na.rm =TRUE)
+summary(activity)  
 ```
 
-* Number of missing values: `r numMissingValues`
-
-##### 2. Devise a strategy for filling in all of the missing values in the dataset.
-##### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
-```{r}
-activityDataImputed <- activityData
-activityDataImputed$steps <- impute(activityData$steps, fun=mean)
+## Histogram after imputation
+```{r Histogram after imputation}
+sumSteps2 <- aggregate(activity$steps ~ activity$date , FUN= sum)
+colnames(sumSteps2) <- c("Date","Total_Steps")
+ggplot(sumSteps2, aes(Total_Steps)) + geom_histogram(col = "red",bins = 8, fill = "blue")
 ```
 
+## Mean and median number of steps after imputation 
+```{r average daily activity pattern after imputation}
 
-##### 4. Make a histogram of the total number of steps taken each day 
-```{r}
-stepsByDayImputed <- tapply(activityDataImputed$steps, activityDataImputed$date, sum)
-qplot(stepsByDayImputed, xlab='Total steps per day (Imputed)', ylab='Frequency using binwith 500', binwidth=500)
+# Mean number of steps
+mean(sumSteps2$Total_Steps, na.rm = TRUE) 
+
+# Median number of steps
+median(sumSteps2$Total_Steps,na.rm = TRUE)
 ```
 
-##### ... and Calculate and report the mean and median total number of steps taken per day. 
-```{r}
-stepsByDayMeanImputed <- mean(stepsByDayImputed)
-stepsByDayMedianImputed <- median(stepsByDayImputed)
-```
-* Mean (Imputed): `r stepsByDayMeanImputed`
-* Median (Imputed):  `r stepsByDayMedianImputed`
-
-
-----
+There is no change in the mean of the values since we impputed the missing values with the mean. The median however has increased. 
 
 ## Are there differences in activity patterns between weekdays and weekends?
-##### 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
 
-```{r}
-activityDataImputed$dateType <-  ifelse(as.POSIXlt(activityDataImputed$date)$wday %in% c(0,6), 'weekend', 'weekday')
+```{r Difference in weekend and weekday patterns}
+activity$weekCategory  <- ifelse(weekdays(activity$date) %in% c("Satuday","Sunday"),"Weekend","Weekday")
+weekPattern <- aggregate(activity$steps ~ activity$interval + activity$weekCategory, FUN= mean)
+colnames(weekPattern) <- c("interval","weekCategory","steps")
+ggplot(weekPattern,aes(x= interval, y = steps), color = weekCategory) + geom_line() +
+  labs(title = "Avg. Daily Steps by Weektype", x = "Interval", y = "No. of Steps") +
+       facet_wrap(~weekCategory, ncol = 1, nrow=2)
 ```
 
-##### 2. Make a panel plot containing a time series plot
-
-```{r}
-averagedActivityDataImputed <- aggregate(steps ~ interval + dateType, data=activityDataImputed, mean)
-ggplot(averagedActivityDataImputed, aes(interval, steps)) + 
-    geom_line() + 
-    facet_grid(dateType ~ .) +
-    xlab("5-minute interval") + 
-    ylab("avarage number of steps")
-```
-
+During the weekdays, the person is more active in the early hours of the day and then he is having lighter motion. In the weekends, he is active throughout the daytime.
